Bug 402836 - When link with anchor (url#anchor) is opened on new tab in background Falkon jump to the bottom of the page
Summary: When link with anchor (url#anchor) is opened on new tab in background Falkon ...
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-03 18:01 UTC by Juraj
Modified: 2019-01-30 15:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Juraj 2019-01-03 18:01:13 UTC
SUMMARY
When link with anchor (url#anchor) is opened on new tab in background Falkon jump to the bottom of the page

STEPS TO REPRODUCE
1. Open link on new tab in background with address like url#anchor. Example: https://community.kde.org/Get_Involved#Bug_Reporting
2. Wait until the tab is fully loaded
3. Switch to the tab and observe where falkon jumped

OBSERVED RESULT
Falkon jumps to the end of the page.

EXPECTED RESULT
Falkon should jump to the place where anchor is located.

SOFTWARE/OS VERSIONS
Operating System: Artix 
KDE Plasma Version: 5.14.4
Qt Version: 5.12.0
KDE Frameworks Version: 5.53.0
Kernel Version: 4.19.13-1-lts
OS Type: 64-bit

ADDITIONAL INFORMATION
Comment 1 David Rosca 2019-01-24 14:37:21 UTC
Git commit 25a6008e6d56184b9f042d07340e31f5fb4d1ef2 by David Rosca.
Committed on 24/01/2019 at 14:36.
Pushed by drosca into branch 'master'.

WebPage: Fix scroll to anchor workaround to also look for element ids
FIXED-IN: 3.1.0

M  +16   -0    src/lib/tools/scripts.cpp
M  +1    -0    src/lib/tools/scripts.h
M  +2    -2    src/lib/webengine/webpage.cpp

https://commits.kde.org/falkon/25a6008e6d56184b9f042d07340e31f5fb4d1ef2
Comment 2 The_assassin 2019-01-30 14:23:11 UTC
This issue still persists to me if middle click or from context menu -> "Open in new tab", but works as expected if drag the link to tab-bar.
WebEngine is: 5.11.2
Comment 3 David Rosca 2019-01-30 14:30:46 UTC
Works for me always with QtWebEngine 5.12
Comment 4 The_assassin 2019-01-30 14:49:57 UTC
Yeah, as I suposed the QtWebEngine version make sense here, but does the fix should affect 5.12 and the greater versions only!?
Comment 5 The_assassin 2019-01-30 15:24:50 UTC
David, do you have the option "Automatically switch to newly opened tab" active? If YES, try when it is disabled, because it is disabled to me, but if I enable this option, then works!