WebPage: Fix scroll to anchor workaround to also look for element ids

BUG: 402836
FIXED-IN: 3.1.0